--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -809,8 +809,8 @@ The Kolmogorov axioms of probability are the foundation of probability theory.
 They are
 \begin{enumerate}
   \item The probability of an event $A$ is a non-negative real number, i.e. $\Prob(A) \geq 0$;
-  \item The probability of the sample space $\Omega$\footnote{The set of all possible
-    events.} is one, i.e. $\Prob(\Omega) = 1$; and
+  \item The probability of the sample space\footnote{The set of all possible
+    events.}, denoted by $\Omega$, is one, i.e. $\Prob(\Omega) = 1$; and
   \item The probability of the union of disjoint events, $A \cap B = \emptyset$, is
     the sum of the probabilities of the events, i.e. $\Prob(A \cup B) = \Prob(A) + \Prob(B)$.
 \end{enumerate}
