--- a/handling.tex
+++ b/handling.tex
@@ -352,7 +352,7 @@ $s = 1$ are available to us.
 Our conclusions may change again:
 \begin{enumerate}
   \itemsep0em
-  \item We can safely assume that Alice has never taken the Biology class, as $\text{Chemistry}
+  \item We can safely assume that Alice has never taken the Biology class, as $\text{Biology}
     \not\in c(\text{Alice}, \text{subject})$.
   \item There is no information about Bob's grades, so we can not affirm nor deny anything
     about his grades.
